RESOLVED FIXED174599
UserMediaPermissionRequestManagerProxy should not use WebCore::Timer
https://bugs.webkit.org/show_bug.cgi?id=174599
Summary UserMediaPermissionRequestManagerProxy should not use WebCore::Timer
Chris Dumez
Reported 2017-07-17 16:47:16 PDT
UserMediaPermissionRequestManagerProxy should not use WebCore::Timer since it runs in the UIProcess.
Attachments
Patch (2.61 KB, patch)
2017-07-17 16:50 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-07-17 16:47:31 PDT
Chris Dumez
Comment 2 2017-07-17 16:50:09 PDT
Chris Dumez
Comment 3 2017-07-17 16:56:41 PDT
Comment on attachment 315730 [details] Patch Clearing flags on attachment: 315730 Committed r219588: <http://trac.webkit.org/changeset/219588>
Chris Dumez
Comment 4 2017-07-17 16:56:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.