UserMediaPermissionRequestManagerProxy should not use WebCore::Timer https://bugs.webkit.org/show_bug.cgi?id=174599 <rdar://problem/33362600>

Reviewed by Tim Horton.

UserMediaPermissionRequestManagerProxy should not use WebCore::Timer since it runs in the
UIProcess. Switch to using RunLoop::Timer instead.

* UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
(WebKit::UserMediaPermissionRequestManagerProxy::UserMediaPermissionRequestManagerProxy):
* UIProcess/UserMediaPermissionRequestManagerProxy.h:

Canonical link: https://commits.webkit.org/191404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219588 268f45cc-cd09-0410-ab3c-d52691b4dbfc